2009-04-21  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.66]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-banner.c (hildon_banner_realize):
	Mark HildonBanner as supporting portrait mode.
	Use GDK to set window properties insetad of direct Xlib calls.

	Fixes: NB#111830 (HildonBanner should be marked as supporting
	portrait)

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-note.c (hildon_note_rebuild):
	Hide action area in information notes. Prevents text from being
	slightly aligned to the left.

	Fixes: NB#111962 (mail_in_ui_folder_move_target_error not aligned
	properly)

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	Patch by Mox Soini (ext-mox.soini@nokia.com)

	* src/hildon-banner.c (hildon_banner_create_animation):
	Use stylus-sized icons in animation banner.

	Fixes: NB#111206 (stylus sized icon for animation banner)

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-gtk.h
	* src/hildon-gtk.c
	(+hildon_gtk_window_set_do_not_disturb):
	New API to set the do-not-disturb flag.

	Fixes: NB#110959 (Add API to set the do-not-disturb flag to a window)

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-progress-indicator-example.c: Fix example

	* src/hildon-gtk.c (set_clear_window_flag)
	(hildon_gtk_window_set_progress_indicator):
	Create a generic function for setting flags to a window.
	Use GDK instead of direct Xlib calls.

2009-04-14  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_set_arrangement):
	Due to NB#88126, if one of the labels is too long it will be
	painted outside the button. The 'value' label is more likely to be
	the longest one, so we change its packing options in order to
	truncate it if necessary. As a side effect, the 'title' label will
	no longer be truncated.

	Fixes: NB#110689 (HildonPickerButton doesn't ellipsize very long values)
